changed buttons border to outline to avoid layout shift

--- a/src/components/general_components/Button.module.css
+++ b/src/components/general_components/Button.module.css
@@ -25,8 +25,9 @@ a {
   outline: 3px solid rgba(255, 255, 255, 0.1);
 }
 .buttonOutline {
-  border: 1px solid rgba(255, 255, 255, 0.12);
+  outline: 1px solid rgba(255, 255, 255, 0.12);
   border-radius: 5px;
+  border: none;
 }
 .text {
   color: #fff;
